give navbar background color to prevent text overlap

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -5,3 +5,7 @@
 .nav-link {
     color: white;
 }
+
+.navbar {
+    background-color:#1E1E1E;
+}
